[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pendulum-stubs"
version = "0.1.0"
description = "PEP 484 type stubs for the 'pendulum' library"
authors = ["Michael Lee <michael.lee.0x2a@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
black = { version="18.9-beta.0", python = "^3.6" }

[tool.black]
py36 = true

